Get all exercises from a user
